--- a/css/style.css
+++ b/css/style.css
@@ -48,6 +48,18 @@ main{
     padding-right: 15px;
     /* outline: 2px solid tomato; */
  }
+ .current::before{
+    content: "";
+    position: absolute;
+    display: inline-block;
+
+    bottom: 0px;
+    left: 0px;
+    width: 100%;
+    height: 4px;
+    border-radius: 2px;
+    background-color: var(--accent-color);
+}
  .visually-hidden{
      position: absolute;
      clip: rect(0 0 0 0);
@@ -91,7 +103,7 @@ main{
     padding: 0px;
 }
 
-.nav-links > .item:not(:last-child){
+.nav-links  .item:not(:last-child){
    margin-right: 50px; 
 }
 
@@ -121,18 +133,7 @@ main{
  .item{
      position: relative;
  }
- .current::before{
-     content: "";
-     position: absolute;
-     display: inline-block;
-
-     bottom: 0px;
-     left: 0px;
-     width: 100%;
-     height: 4px;
-     border-radius: 2px;
-     background-color: var(--accent-color);
- }
+ 
 
  .nav-contact{
      margin-left: auto;
@@ -483,7 +484,8 @@ footer{
 }
 footer .logo-studio{
     color: #ffffff;
-}.footer-part
+}
+.footer-part
 address{
     margin-bottom: 9px;
 
@@ -787,6 +789,7 @@ address{
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
+/* modal-window */
 .backdrop{
     position: fixed;
     top: 0;
