--- a/css/main.css
+++ b/css/main.css
@@ -820,6 +820,15 @@ img {
   margin-bottom: 20px;
 }
 
+.textarea .form-label {
+  display: block;
+  margin-bottom: 4px;
+  font-size: 12px;
+  line-height: 1.16;
+  letter-spacing: 0.01em;
+  color: #757575;
+}
+
 .textarea .form-textarea {
   padding: 12px 16px;
   border: 1px solid rgba(33, 33, 33, 0.2);
