--- a/scss/components/_modal.scss
+++ b/scss/components/_modal.scss
@@ -115,6 +115,17 @@
 .textarea{
     margin-bottom: 20px;
 
+    .form-label{
+        display: block;
+        margin-bottom: 4px;
+        
+        font-size: 12px;
+        line-height: 1.16;
+        letter-spacing: 0.01em;
+        color: $secColor;
+    
+    }
+
     .form-textarea{
         padding: 12px 16px;
         border: 1px solid rgba(33, 33, 33, 0.2);
