корректировка секции команда

--- a/css/main.css
+++ b/css/main.css
@@ -439,7 +439,7 @@ img {
   color: #ffffff;
 }
 
-.master-social .master-link .master-icon {
+.master-social .master-icon {
   background-size: contain;
   background-position: center;
   width: 20px;
