--- a/scss/components/_portfolio.scss
+++ b/scss/components/_portfolio.scss
@@ -9,7 +9,7 @@
     padding-bottom: 94px;
     background-color: #ffffff;
 }
-.list{
+.samples-list{
     display: flex;
     justify-content: center;
     padding: 0px;
@@ -93,15 +93,21 @@
         opacity: 0.9;
         transform: translateY(100%);
         transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        padding: 63px 24px;
+        font-size: 18px;
+        line-height: 1.56;
+        letter-spacing: 0.03em;
 
-        &-text{
-            padding: 63px 24px;
-            font-size: 18px;
-            line-height: 1.56;
-            letter-spacing: 0.03em;
+        color: #FFFFFF;
 
-            color: #FFFFFF; 
-        }
+        // &-text{
+        //     padding: 63px 24px;
+        //     font-size: 18px;
+        //     line-height: 1.56;
+        //     letter-spacing: 0.03em;
+
+        //     color: #FFFFFF; 
+        // }
     }
 }
 .project-link:hover .overlay,
