--- a/scss/components/_section-strengths.scss
+++ b/scss/components/_section-strengths.scss
@@ -19,39 +19,40 @@
     display: flex;
     padding: 0px;
 
-    .item{
-        width: 270px;
-
-        &:not(:last-child){
-            margin-right: 30px;
-        }
-        .strengths-icon{
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            width: 270px;
-            height: 120px;
-            background-color: #F5F4FA;
-            margin-bottom: 30px; 
-        }
-        .strengths-title{
-            margin-bottom: 10px;
-   
-            font-weight: 700;
-            font-size: 14px;
-            line-height: 16px;
-            letter-spacing: 0.03em;
-            text-transform: uppercase;
-        }
-        .strengths-text{
-            color: $secColor ;
-            font-size: 14px;
-            line-height: 1.71;
-            letter-spacing: 0.03em;
-        }
-    }
+    
     .strengths-list:not(:last-child){
         margin-right: 30px;
+    }
+}
+.strengths-item{
+    width: 270px;
+
+    &:not(:last-child){
+        margin-right: 30px;
+    }
+    .strengths-icon{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 270px;
+        height: 120px;
+        background-color: #F5F4FA;
+        margin-bottom: 30px; 
+    }
+    .strengths-title{
+        margin-bottom: 10px;
+
+        font-weight: 700;
+        font-size: 14px;
+        line-height: 16px;
+        letter-spacing: 0.03em;
+        text-transform: uppercase;
+    }
+    .strengths-text{
+        color: $secColor ;
+        font-size: 14px;
+        line-height: 1.71;
+        letter-spacing: 0.03em;
     }
 }
 .product{
